@@ -190,3 +190,7 @@ DOCSTEP3.text=\u0044\u006f\u006b\u0075\u006d\u0065\u006e\u0074\u0061\u0074\u0069
 HELP.text=\u0048\u0069\u006c\u0066\u0065\u002e\u002e\u002e
 ONLINEHELP.text=\u004f\u006e\u006c\u0069\u006e\u0065\u0068\u0069\u006c\u0066\u0065
 STEREOTYPE.text=\u0053\u0074\u0065\u0072\u0065\u006f\u0074\u0079\u0070
+TARGET.text=\u005a\u0069\u0065\u006c
+SRCDIRECTORY.text=\u0053\u0052\u0043\u002d\u0056\u0065\u0072\u007a\u0065\u0069\u0063\u0068\u006e\u0069\u0073
+PACKAGENAME.text=\u0050\u0061\u0063\u006b\u0061\u0067\u0065
+OPENXAVAEXPORT.text=\u004f\u0070\u0065\u006e\u0058\u0061\u0076\u0061\u0020\u0045\u0078\u0070\u006f\u0072\u0074\u002e\u002e\u002e
